(alias
  (name site)
  (deps css/app.css
        css/prism.css
        images/aeos/cross.png
        images/aeos/perf.png
        images/aeos/sin_perf.png
        images/algodiff/plot_00.png
        images/algodiff/plot_01.png
        images/asset/liang.jpg
        images/case-image-inception/panda.png
        images/case-nst/example_fst00.png
        images/case-nst/nst_example.png
        images/case-obj-detect/example_00.jpg
        images/case-obj-detect/example_01.jpg
        images/case-obj-detect/example_obj.jpg
        images/case-obj-detect/example_seg.jpg
        images/cgraph/owl_cgraph_functor_stack.png
        images/cgraph/owl_cgraph_mnist_opt.png
        images/cgraph/owl_cgraph_mnist_raw.png
        images/cgraph/owl_cgraph_opt_0.png
        images/cgraph/owl_cgraph_opt_1.png
        images/cgraph/owl_cgraph_opt_2.png
        images/cgraph/owl_vision_buildings.jpg
        images/cgraph/owl_vision_lazymnistinf.png
        images/cgraph/owl_vision_pebble.png
        images/cgraph/plot_cgraph_01.png
        images/constant/metric_001.png
        images/introduction/plot_00.png
        images/introduction/plot_01.png
        images/linear-algebra/plot_00.png
        images/matrix/plot_00.png
        images/stats/plot_01.png
        images/stats/plot_02.png
        images/symbolic/latex_00.png
        images/symbolic/latex_01.png
        images/visualisation/plot_001.png
        images/visualisation/plot_002.png
        images/visualisation/plot_003.png
        images/visualisation/plot_004.png
        images/visualisation/plot_005.png
        images/visualisation/plot_006.png
        images/visualisation/plot_007.png
        images/visualisation/plot_008.png
        images/visualisation/plot_009.png
        images/visualisation/plot_010.png
        images/visualisation/plot_011.png
        images/visualisation/plot_012.png
        images/visualisation/plot_013.png
        images/visualisation/plot_014.png
        images/visualisation/plot_015.png
        images/visualisation/plot_016.png
        images/visualisation/plot_017.png
        images/visualisation/plot_018.png
        images/visualisation/plot_019.png
        images/visualisation/plot_020.png
        images/visualisation/plot_021.png
        images/visualisation/plot_022.png
        images/visualisation/plot_023.png
        images/visualisation/plot_024.png
        images/visualisation/plot_025.png
        images/visualisation/plot_026.png
        js/_functions.js
        js/app.js
        js/discourse.js
        js/jquery.min.js
        js/modernizr.js
        js/prism.js
        js/min/app-min.js
        js/min/modernizr-min.js
        theme/pdf/pdf.css))(alias (name site) (deps faqs.html))
  (rule
    (targets faqs.html)
    (deps    (alias ../book/html) ../book/faqs.html ../bin/bin/app.exe )
    (action  (run otb-build build faqs -o . -repo-root ..)))

(alias (name site) (deps index.html))
  (rule
    (targets index.html)
    (deps    (alias ../book/html) ../book/index.html ../bin/bin/app.exe )
    (action  (run otb-build build index -o . -repo-root ..)))

(alias (name site) (deps install.html))
  (rule
    (targets install.html)
    (deps    (alias ../book/html) ../book/install.html ../bin/bin/app.exe )
    (action  (run otb-build build install -o . -repo-root ..)))

(alias (name site) (deps toc.html))
  (rule
    (targets toc.html)
    (deps    (alias ../book/html) ../book/toc.html ../bin/bin/app.exe ../book/toc.scm)
    (action  (run otb-build build toc -o . -repo-root ..)))

(alias (name site) (deps aeos.html))

(rule
  (targets aeos.html)
  (deps    (:x ../book/aeos.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps algodiff.html))

(rule
  (targets algodiff.html)
  (deps    (:x ../book/algodiff.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps architecture.html))

(rule
  (targets architecture.html)
  (deps    (:x ../book/architecture.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps backend.html))

(rule
  (targets backend.html)
  (deps    (:x ../book/backend.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps broadcast.html))

(rule
  (targets broadcast.html)
  (deps    (:x ../book/broadcast.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps case-gpu.html))

(rule
  (targets case-gpu.html)
  (deps    (:x ../book/case-gpu.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps case-image-inception.html))

(rule
  (targets case-image-inception.html)
  (deps    (:x ../book/case-image-inception.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps case-nst.html))

(rule
  (targets case-nst.html)
  (deps    (:x ../book/case-nst.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps case-obj-detect.html))

(rule
  (targets case-obj-detect.html)
  (deps    (:x ../book/case-obj-detect.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps cgraph.html))

(rule
  (targets cgraph.html)
  (deps    (:x ../book/cgraph.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps community.html))

(rule
  (targets community.html)
  (deps    (:x ../book/community.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps constant.html))

(rule
  (targets constant.html)
  (deps    (:x ../book/constant.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps convention.html))

(rule
  (targets convention.html)
  (deps    (:x ../book/convention.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps core-opt.html))

(rule
  (targets core-opt.html)
  (deps    (:x ../book/core-opt.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps dataframe.html))

(rule
  (targets dataframe.html)
  (deps    (:x ../book/dataframe.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps diffequation.html))

(rule
  (targets diffequation.html)
  (deps    (:x ../book/diffequation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps distributed.html))

(rule
  (targets distributed.html)
  (deps    (:x ../book/distributed.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps introduction.html))

(rule
  (targets introduction.html)
  (deps    (:x ../book/introduction.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps linear-algebra.html))

(rule
  (targets linear-algebra.html)
  (deps    (:x ../book/linear-algebra.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps maths.html))

(rule
  (targets maths.html)
  (deps    (:x ../book/maths.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps matrix.html))

(rule
  (targets matrix.html)
  (deps    (:x ../book/matrix.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps ndarray.html))

(rule
  (targets ndarray.html)
  (deps    (:x ../book/ndarray.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps neural-network.html))

(rule
  (targets neural-network.html)
  (deps    (:x ../book/neural-network.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps nlp.html))

(rule
  (targets nlp.html)
  (deps    (:x ../book/nlp.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps optimisation.html))

(rule
  (targets optimisation.html)
  (deps    (:x ../book/optimisation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps ppl.html))

(rule
  (targets ppl.html)
  (deps    (:x ../book/ppl.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps prologue.html))

(rule
  (targets prologue.html)
  (deps    (:x ../book/prologue.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps signal.html))

(rule
  (targets signal.html)
  (deps    (:x ../book/signal.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps slicing.html))

(rule
  (targets slicing.html)
  (deps    (:x ../book/slicing.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps stats.html))

(rule
  (targets stats.html)
  (deps    (:x ../book/stats.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps symbolic.html))

(rule
  (targets symbolic.html)
  (deps    (:x ../book/symbolic.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps testing.html))

(rule
  (targets testing.html)
  (deps    (:x ../book/testing.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps utilities.html))

(rule
  (targets utilities.html)
  (deps    (:x ../book/utilities.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps visualisation.html))

(rule
  (targets visualisation.html)
  (deps    (:x ../book/visualisation.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(alias (name site) (deps zoo.html))

(rule
  (targets zoo.html)
  (deps    (:x ../book/zoo.html)
           (alias ../book/html)
           ../bin/bin/app.exe
           ../book/toc.scm)
  (action  (run otb-build build chapter -o . -repo-root .. %{x})))

(rule
  (targets inputs.tex)
  (deps    %{bin:otb-build}
           ../book/toc.scm)
  (action  (run otb-build build inputs -o . -repo-root ..)))

(rule
  (targets book.aux book.idx book.toc)
  (deps    (alias ../book/latex)
           (:x ../book/book.tex)
           inputs.tex)
  (action  (system "pdflatex -interaction=nonstopmode %{x} -draftmode")))

(rule
  (targets book.ind)
  (deps    (:x book.idx))
  (action  (system "makeindex %{x}")))

(alias (name pdf) (deps book.pdf))

(rule
  (targets book.pdf)
  (deps    (alias ../book/latex)
           (:x ../book/book.tex)
           inputs.tex
           book.aux
           book.ind
           book.toc)
  (action  (system "pdflatex -interaction=nonstopmode %{x}")))
