(executables
  (package      otb-example)
  (names        app)
  (public_names otb-app-ndarray)
  (libraries    owl)
  (flags        :standard -w -33)
  (modules      app 
                interface_00
                interface_01
                interface_02
                interface_03))

(alias
 (name   runtest)
 (deps   app.exe))