opam-version: "2.0"
name: "otb-example"
version: "dev"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
homepage: "https://github.com/owlbarn/book"
bug-reports: "https://github.com/owlbarn/book/issues"
synopsis: "Owl Tutorial Book examples"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.11.0"}
]
build: ["dune" "build"]
depexts: []
dev-repo: "git+https://github.com/owlbarn/book.git"