opam-version: "2.0"
name: "otb-example"
version: "dev"
maintainer: "Liang Wang <ryanrhymes@gmail.com>"
authors: ["Author A" "Author B" "Author C"]
license: "ISC"
homepage: "https://github.com/owlbarn/owl_tutorials"
bug-reports: "https://github.com/owlbarn/owl_tutorials/issues"
synopsis: "Owl Tutorial Book sources"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.11.0"}
]
build: ["dune" "build"]
depexts: [
  ["tzdata"] {os-distribution = "ubuntu"}
  ["tzdata"] {os-distribution = "debian"}
  ["tzdata"] {os-distribution = "alpine"}
]
dev-repo: "git+https://github.com/owlbarn/owl_tutorials.git"